--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<meta http-equiv="refresh" content="0; url=2.0">
+<meta http-equiv="refresh" content="0; url=2.0/2.0">
 <title>Garden Quest 2.0</title>
 <a href="2.0">Click here if you are not redirected automatically.</a>
